tests/neg/parse_error2.scala
class Main {
  val x: Int =

  def main = {
    0
  }
}